--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
     </header>
     <section>
+        <h1>Published in <a class="itchio" href="https://dextorsioner.itch.io">itch.io</a></h1>
         <iframe frameborder="0" src="https://itch.io/embed/2718063?bg_color=0c071e&amp;fg_color=ffffff&amp;link_color=fa5c5c&amp;border_color=000000" width="552" height="167"><a href="https://dextorsioner.itch.io/desktop-pet">Desktop Pet by Dextorsioner</a></iframe>
     </section>
     <footer>
