Game Jam Update
Addition of the Game Jam first participation.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         <h1>Published in <a class="itchio" href="https://dextorsioner.itch.io">itch.io</a></h1>
         <iframe frameborder="0" src="https://itch.io/embed/2718063?bg_color=0c071e&amp;fg_color=ffffff&amp;link_color=fa5c5c&amp;border_color=000000" width="552" height="167"><a href="https://dextorsioner.itch.io/desktop-pet">Desktop Pet by Dextorsioner</a></iframe>
     </section>
+    <section>
+        <h2>JAM Participations</a></h2>
+            <!-- <h3>2024</h3> -->
+            <iframe frameborder="0" src="https://itch.io/embed/2914461?bg_color=0c071e&amp;fg_color=ffffff&amp;link_color=fa5c5c&amp;border_color=000000" width="552" height="167"><a href="https://dextorsioner.itch.io/paper-to-the-moon">Paper to the MOON GMTK Game Jam 2024 by Dextorsioner</a></iframe>
+    </section>
     <footer>
         <div id="itchio" class="rrss_icon">
             <a href="https://dextorsioner.itch.io" target="_blank">
